--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="css/style.css">
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Título Gatos</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+<body>
 <div id="holodex">
   <div id="left">
     <div id="bg_curve1_left"></div>
@@ -57,5 +62,6 @@
     <div id="curve2_right"></div>
   </div>
 </div>
-
+</body>
+</html>
 <script src="js/search.js"></script>
