--- a/index.html
+++ b/index.html
@@ -1,67 +1,121 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Título Gatos</title>
+    <title>Holodex</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
 <body>
-<div id="holodex">
-  <div id="left">
-    <div id="bg_curve1_left"></div>
-    <div id="bg_curve2_left"></div>
-    <div id="curve1_left">
-      <div id="buttonGlass">
-        <div id="reflect"></div>
-        <div id="z-logo"><img src="https://holozing.com/assets/logo-7dd25396.png" width="40"> </div>
+  <div id="holodex">
+    <div id="left">
+      <div id="bg_curve1_left"></div>
+      <div id="bg_curve2_left"></div>
+      <div id="curve1_left">
+        <div id="buttonGlass">
+          <div id="reflect"></div>
+          <div id="z-logo"><img src="https://holozing.com/assets/logo-7dd25396.png" width="40"> </div>
+        </div>
+        <div id="miniButtonGlass1"></div>
+        <div id="miniButtonGlass2"></div>
+        <div id="miniButtonGlass3"></div>
+        <div id="miniButtonGlass4"></div>
       </div>
-      <div id="miniButtonGlass1"></div>
-      <div id="miniButtonGlass2"></div>
-      <div id="miniButtonGlass3"></div>
-      <div id="miniButtonGlass4"></div>
-    </div>
-    <div id="curve2_left">
-      <div id="junction">
-        <div id="junction1"></div>
-        <div id="junction2"></div>
-      </div>
-    </div>
-    <div id="screen">
-      <div id="picturebg" class="animatered">
-        <div id="picture">
+      <div id="curve2_left">
+        <div id="junction">
+          <div id="junction1"></div>
+          <div id="junction2"></div>
         </div>
       </div>
-      <div id="speakers">
-        <div class="sp"></div>
-        <div class="sp"></div>
-        <div class="sp"></div>
+      <div id="screen">
+        <div id="picturebg" class="">
+          <div id="picture">
+            <div id="ClaimPanel">
+              <section class='FlexContainer'>
+                <div><strong>Earns</strong></div>
+                <div><strong>Zing Rewards</strong></div>
+              </section>
+              <section class='FlexContainer'>
+                <div><strong>Staking</strong></div>
+                <div id="staking"> </div>
+              </section>
+              <section class='FlexContainer'>
+                <div><strong>Delegation</strong></div>
+                <div id="delegation"> </div>
+              </section>
+              <section class='FlexContainer'>
+                <div><strong>POSH</strong></div>
+                <div id="posh"> </div>
+              </section>
+
+              <section class='FlexContainer'>
+                <div><strong>Total</strong></div>
+                <div id="total"></div>
+              </section>
+              <div class="content">
+                <button id="claim" class="claimButton">Claim</button>
+              </div>
+            </div>
+
+            <div id="successful">
+              <img width="150"
+                src="https://files.peakd.com/file/peakd-hive/raulmz/AJoDg6SJFqjCuMjDCQHmmjBR778ibsf1f1cs3C6BGdnetxozCf73F23wgRXvzFX.png">
+
+              <div class="content"><strong>Success...</strong></div>
+            </div>
+          </div>
+        </div>
+        <div id="speakers">
+          <div class="sp"></div>
+          <div class="sp"></div>
+          <div class="sp"></div>
+        </div>
+      </div>
+
+    </div>
+    <div id="right">
+      <div class="search">
+        <input type="text" id="search" class="searchTerm" placeholder="Find Creatures">
+        <button type="submit" class="searchButton">
+          <i class="fa fa-search"></i>
+        </button>
+      </div>
+      <div id="stats">
+        <div id="statsDescription">
+
+        </div>
+        <div class="ButtonPanel">
+          <section class='statsFlexContainer'>
+            <div id="rewards"><strong>Rewards</strong></div>
+            <div id="total"><strong>Profile</strong></div>
+          </section>
+          <section class='statsFlexContainer'>
+            <div><strong>Token Info</strong></div>
+            <div id="total"><strong>Logout</strong></div>
+          </section>
+        </div>
+      </div>
+      <div id="reset">
+        <button id="resetButton" onclick="reset()" class="claimButton">Reset</button>
+      </div>
+      <div id="barbutton3"></div>
+      <div id="barbutton4"></div>
+      <div id="bg_curve1_right"></div>
+      <div id="bg_curve2_right"></div>
+      <div id="curve1_right"></div>
+      <div id="curve2_right">
+        <div id="fieldNeon">
+          <input type="text" id="username" class="username neon" placeholder="You Username Here..." />
+        </div>
+        <div id="buttonGlassRight" onclick="send()">
+          <div id="reflectRight"></div>
+          <div id="z-user"><img id="userprofile" class="rounded"
+              src="https://files.peakd.com/file/peakd-hive/raulmz/23wqiMStAS9AfQAb825mL7WsTGsNke1GYKuKfgm6fYH7Cnmkg4qFC91p9rtRVX4k34kEn.png"
+              width="24"> </div>
+        </div>
       </div>
     </div>
-
   </div>
-  <div id="right">
-    <div class="search">
-      <input type="text" id="search" class="searchTerm" placeholder="Find Creatures">
-      <button type="submit" class="searchButton">
-        <i class="fa fa-search"></i>
-      </button>
-    </div>
-    <div id="stats">
-      <strong>Name:</strong> Fire Wolf<br />
-      <strong>Type:</strong> Fire<br />
-      <strong>Height:</strong> x'xx<br />
-      <strong>Weight:</strong> 20.0 lbs.<br /><br />
-      History...<br />
-    </div>
-
-    <div id="barbutton3"></div>
-    <div id="barbutton4"></div>
-    <div id="bg_curve1_right"></div>
-    <div id="bg_curve2_right"></div>
-    <div id="curve1_right"></div>
-    <div id="curve2_right"></div>
-  </div>
-</div>
 </body>
 </html>
 <script src="js/search.js"></script>
