--- a/index.html
+++ b/index.html
@@ -28,8 +28,56 @@
         </div>
       </div>
       <div id="screen">
-        <div id="picturebg" class="">
+        <div id="picturebg" class="picturebgbs">
           <div id="picture">
+
+            <div id="WelcomePanel">
+              <center><strong>Welcome!</strong></center>
+              This is a fan project, initially it started to provide information about the characters in the game, however the project has grown and now you can even claim your rewards.
+              <center><br><strong>Latest Improvements:</strong></center>
+              <br>- Added Integration with Hive Keychain.
+              <br>- Added Claim Rewards.
+              <br>- Added Token Information.
+            </div>
+            <div id="ProfilePanel">
+              <section class='FlexContainer'>
+                <div><strong>Liquid</strong></div>
+                <div><strong></strong></div>
+              </section>
+              <section class='FlexContainer'>
+                <div><strong>Staked</strong></div>
+                <div id="userStake"></div>
+              </section>
+              <section class='FlexContainer'>
+                <div><strong>Delegated HP</strong></div>
+                <div id="delegateHP"> </div>
+              </section>
+              <section class='FlexContainer'>
+                <div><strong>Posh Balance
+                  </strong></div>
+                <div id="poshBalance"> </div>
+              </section>
+            </div>
+            <div id="TokenInfoPanel">
+              <section class='FlexContainer'>
+                <div><strong>Total Zing Staked</strong></div>
+              </section>
+              <section class='FlexContainer'>
+                <div id="totalZingStaked"></div>
+              </section>
+              <section class='FlexContainer'>
+                <div><strong>Circulating Supply</strong></div>
+              </section>
+              <section class='FlexContainer'>
+                <div id="calculatedCirculationBalance"></div>
+              </section>
+              <section class='FlexContainer'>
+                <div><strong>Market Price</strong></div>
+              </section>
+              <section class='FlexContainer'>
+                <div id="marketPrice"> </div>
+              </section>
+            </div>
             <div id="ClaimPanel">
               <section class='FlexContainer'>
                 <div><strong>Earns</strong></div>
@@ -37,7 +85,7 @@
               </section>
               <section class='FlexContainer'>
                 <div><strong>Staking</strong></div>
-                <div id="staking"> </div>
+                <div id="staking"></div>
               </section>
               <section class='FlexContainer'>
                 <div><strong>Delegation</strong></div>
@@ -90,8 +138,8 @@
             <div id="total"><strong>Profile</strong></div>
           </section>
           <section class='statsFlexContainer'>
-            <div><strong>Token Info</strong></div>
-            <div id="total"><strong>Logout</strong></div>
+            <div id="tokenInfo"><strong>Token Info</strong></div>
+            <div id="logout"><strong>Logout</strong></div>
           </section>
         </div>
       </div>
@@ -105,7 +153,7 @@
       <div id="curve1_right"></div>
       <div id="curve2_right">
         <div id="fieldNeon">
-          <input type="text" id="username" class="username neon" placeholder="You Username Here..." />
+          <input type="text" id="username" class="username neon" placeholder="Your Username Here..." />
         </div>
         <div id="buttonGlassRight" onclick="send()">
           <div id="reflectRight"></div>
