--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <meta meta name="viewport" content="width=device-width, user-scalable=no" />
   </head>
 <body>
   <div id="holodex">
     <div id="left">
+      <div id="alert">Use the device in landscape mode.</div>
       <div id="bg_curve1_left"></div>
       <div id="bg_curve2_left"></div>
       <div id="curve1_left">
