--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
 
             <div id="">
-              <div id="buttonGlassRight" onclick="send()">
+              <div id="buttonGlassRight">
                 <input type="text" id="fieldNeon" class="username neon" placeholder="Your Username Here..." />
 
-                <div id="z-user"><img id="userprofile" class="rounded" src="img/keychain.png" width="24"> </div>
+                <div id="z-user" onclick="send()"><img id="userprofile" class="rounded" src="img/keychain.png" width="24"> </div>
               </div>
             </div>
           </section>
